chambal.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 1875,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.36,
  "homepage_snapshot_redirected_domain": "chambal.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401001028id_/http://www.chambal.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401001028id_/http%3A//chambal.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "chambal.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615064522id_/http%3A//www.chambal.com/legal/privacy.html",
  "policy_title": "Chambal.com- Privacy Policy",
  "policy_url": "chambal.com/legal/privacy.html",
  "sha1": "6e5813138d02da744aa8e013885a676340ad3555",
  "simhash": 9859461843108366256,
  "simhash_updated": false,
  "site_hostname": "chambal.com",
  "site_url": "http://chambal.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615064522",
  "word_count": 312,
  "year": 2006
}

--- a/c/ch/cha/chambal.com.html
+++ b/c/ch/cha/chambal.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chambal.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220121033id_/http%3A//www.chambal.com/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chambal.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615064522id_/http%3A//www.chambal.com/legal/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Chambal.com- Privacy Policy</title>
@@ -12,7 +12,7 @@
 
 <table border="0" cellspacing="0" cellpadding="0" width="90%">
 <tbody><tr>
-<td align="left" width="35%"><a href="http://www.chambal.com"><img src="http://www.chambal.com/images/ChambalLogo.gif" border="0" alt="Go to Chambal.com Home" height="90" width="300"></a></td>
+<td align="left" width="35%"><a href="http://www.chambal.com"><img src="http://www.chambal.com/images/ChambalLogo.gif" border="0" alt="Compare prices for new and used products at chambal.com" height="90" width="300"></a></td>
 <td align="left" width="65%">
 
 </td></tr></tbody></table>
@@ -79,4 +79,6 @@
 	</center>
 
 
-</body></html>
+
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">_uacct = "UA-92730-1";urchinTracker();</script></body></html>
