--- a/j/jo/jou/journalseek.net.html
+++ b/j/jo/jou/journalseek.net.html
@@ -1,48 +1,60 @@
-<!--The following is the downloaded HTML source of the journalseek.net privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231161549id_/http%3A//genamics.com/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the journalseek.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615064600id_/http%3A//genamics.com/privacypolicy.htm) for the most accurate reproduction.-->
 
-<html><head>
-
-<title>Genamics Privacy Policy</title>
-<meta name="Description" content="Providing powerful software and resources for scientists.">
-<meta name="keywords" content="genamics, privacy policy">
-
-<link rel="stylesheet" href="genamics_stylesheet.css">
-<script language="javascript" src="genamics.js" type="text/javascript"></script>
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+	<title>Genamics Privacy Policy</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<meta name="Description" content="The privacy policy of Genamics Ltd.">
+	<meta name="Keywords" content="privacy policy, genamics, security, personal information, disclaimer">
+	<link rel="stylesheet" href="http://genamics.com/genamics_new.css">
+	<script language="javascript" src="http://genamics.com/genamics_new.js" type="text/javascript"></script>
 </head>
 
-<body marginheight="0" marginwidth="0">
-<script type="text/javascript">topPanel('genamics')</script><style type="text/css">
-li { margin-left: 6pt }
-ul { margin-left: 8pt }
-.newslist {	margin-bottom: 10px }
-</style>
-<table width="100%" cellpadding="0" cellspacing="0" border="0">
-<tbody><tr><td nowrap="" width="100%" bgcolor="#000088" height="18" align="left">
-&nbsp;&nbsp;&nbsp;<a href="http://genamics.com/index.htm" class="globallinks">Site Map</a>&nbsp;|&nbsp;
-<a href="http://journalseek.net" class="globallinks">JournalSeek</a>&nbsp;|&nbsp;
-<a href="http://genamics.com/software/index.htm" class="globallinks">SoftwareSeek</a>&nbsp;|&nbsp;
-<a href="http://genamics.com/genomes/index.htm" class="globallinks">GenomeSeek</a>&nbsp;|&nbsp;
-<a href="http://genamics.com/expression/index.htm" class="globallinks">Expression</a>&nbsp;|&nbsp;
-<a href="http://genamics.com/developer/index.htm" class="globallinks">Developer</a>&nbsp;|&nbsp;
-<a href="http://genamics.com/cgi-bin/research.cgi" class="globallinks">Research</a>
-</td></tr>
-<tr><td bgcolor="#000066" height="1"></td></tr>
-<tr><td bgcolor="#000050" height="1"></td></tr>
-</tbody></table>
-<table width="100%" cellpadding="0" cellspacing="0" border="0">
-<tbody><tr><td valign="top">
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
-<tbody><tr><td height="130" width="612"><img src="http://genamics.com/images/genamics.gif"></td>
-<td background="http://genamics.com/images/headingbg_center.gif" height="20" width="100%">
-<img height="1" src="http://genamics.com/images/inv.gif" width="1"></td></tr>
-<tr><td colspan="2" height="4" nowrap="" width="610"></td></tr>
-<tr><td colspan="2">
+
+<body>
 
 
-<div style="margin-left:6px;margin-right:6px">
+	<table width="100%" cellpadding="0" cellspacing="0" border="0">
+	<tbody><tr><td width="100%" bgcolor="#000088" height="18" align="left">
+	&nbsp;&nbsp;&nbsp;<a href="http://genamics.com/index.htm" class="globallinks">Home</a>&nbsp;|&nbsp;
+	<a href="http://journalseek.net" class="globallinks">JournalSeek</a>&nbsp;|&nbsp;
+	<a href="http://genamics.com/software/index.htm" class="globallinks">SoftwareSeek</a>&nbsp;|&nbsp;
+	<a href="http://genamics.com/genomes/index.htm" class="globallinks">GenomeSeek</a>&nbsp;|&nbsp;
+	<a href="http://genamics.com/expression/index.htm" class="globallinks">Expression</a>&nbsp;|&nbsp;
+	<a href="http://genamics.com/developer/index.htm" class="globallinks">Developer</a>&nbsp;|&nbsp;
+	<a href="http://genamics.com/research.htm" class="globallinks">Research</a>
+	</td></tr>
+	<tr><td bgcolor="#000066" height="1"></td></tr>
+	<tr><td bgcolor="#000050" height="1"></td></tr>
+	</tbody></table>
 
+	<table width="100%" cellpadding="0" cellspacing="0">
+	<tbody><tr><td valign="top">
+	<table border="0" cellpadding="0" cellspacing="0" width="100%">
+	<tbody><tr><td height="130" width="662"><a href="http://genamics.com"><img width="662" src="http://genamics.com/images/genamics.png" border="0" alt="Return to Genamics Home" title="Return to Genamics Home"></a></td>
+	<td style="background-image:url(http://genamics.com/images/headingbg_center.gif)" height="20" width="100%">
+	<img height="1" src="http://genamics.com/images/inv.gif" width="1" alt=""></td></tr>
+	<tr><td colspan="2" height="4"></td></tr>
+	<tr><td colspan="2">
+	<table width="100%" cellpadding="6"><tbody><tr><td>
+		
+		<script type="text/javascript"><!--
+		google_ad_client = 'pub-9829189707301949';
+		google_alternate_color = 'FFFFFF';
+		google_ad_width = 468;
+		google_ad_height = 60;
+		google_ad_format = '468x60_as';
+		google_ad_type = 'text_image';
+		google_ad_channel ='1221726654';
+		google_color_border = '6699CC';
+		google_color_bg = '003366';
+		google_color_link = 'FFFFFF';
+		google_color_url = 'AECCEB';
+		google_color_text = 'AECCEB';
+		//--></script>
+		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+		</script>
+	
 <p class="heading1">Genamics Privacy Policy</p>
 
 <p>Genamics has drafted this document, which details how we gather and disseminate information, in an effort to demonstrate our strong commitment to online privacy. Please contact us if you have any questions about our privacy policy.</p>
@@ -75,54 +87,86 @@ ul { margin-left: 8pt }
 
 <p>This site contains links to other sites. Genamics is not responsible for the content or privacy practices of these sites.</p>
 
+<br><center>
+	<table width="420" style="border:1px solid #777777;background-color:#FDFFCA">
+	<tbody><tr><td align="center" valign="middle">
+	<p>Get the latest <a href="http://zantac.researchtoday.net/"><b>Research on Zantac</b></a>.</p>
+	<p>Learn more about topics such as <b><a href="http://zantac.researchtoday.net/">Zantac Ranitidine</a></b>.</p>
+	<p>Zantac Research is a new free online publication from <a href="http://researchtoday.net/">Research Today Publications</a>.</p>
+	</td></tr>
+	</tbody></table></center>
+	</td></tr></tbody></table>
+	</td></tr></tbody></table>
+	</td><td valign="top" width="180">
+	<table bgcolor="#215581" cellpadding="0" cellspacing="0" width="180">
+	<tbody><tr><td style="background-image:url(http://genamics.com/images/sidepanelblank.gif)">
+	<p class="sidepanel"><br><br><br><br>
+	<font style="font-size: 12px"><script type="text/javascript" language="javascript">p(greeting)</script></font>
+	<br>
+	<script type="text/javascript" language="javascript">p(dateString)</script><br><br></p>
+	</td></tr><tr><td>
+	
+	<a href="javascript:addToFavorites()" onmouseover="act(&quot;addtofavorites&quot;)" onmouseout="inact(&quot;addtofavorites&quot;)">
+	<img src="http://genamics.com/images/addtofavorites_off.gif" name="addtofavorites" alt="Add To Favorites" title="Add to Favorites" border="0" vspace="4"></a><br>
+	<a href="javascript:emailThisPage()" onmouseover="act(&quot;emailthispage&quot;)" onmouseout="inact(&quot;emailthispage&quot;)">
+	<img src="http://genamics.com/images/emailthispage_off.gif" name="emailthispage" alt="Email This Page" title="Email This Page" border="0" vspace="4"></a><br>
+	
+	<br>	
+<div align="center">	
+
+		<center>
+		<a href="http://www.genedetect.com" target="_"><img border="0" src="http://genamics.com/images/genedetect.gif" alt="Gene Detect" title="Gene Detect"></a><br><br>
+		
+		<script type="text/javascript"><!--
+		google_ad_client = 'pub-9829189707301949';
+		google_ad_width = 120;
+		google_ad_height = 240;
+		google_ad_format = '120x240_as';
+		google_ad_type = 'text';
+		google_ad_channel = '1221726654';
+		//--></script>
+		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+		</script>
+	
+		<br><br>
+		<img src="http://genamics.com/images/siteawards.png" title="Site Awards" alt="Site Awards"><br>
+		<img src="http://genamics.com/images/dmoz.gif" title="DMOZ Cool Site" alt="DMOZ Cool Site" vspace="5"><br>
+		<img src="http://genamics.com/images/scoutreport.gif" title="Scout Report Selection" alt="Scout Report Selection" vspace="5"><br>
+		<img src="http://genamics.com/images/hmsbeagle.gif" title="HMS Beagle WebPick" alt="HMS Beagle WebPick" vspace="5"><br>
+		<img src="http://genamics.com/images/isicurrentcontents.gif" title="ISI Current Web Contents Selection" alt="ISI Current Web Contents Selection" vspace="0">
+		</center>
+		
 </div>
 
-<script type="text/javascript">sidePanelTop('home')</script></td></tr></tbody></table>
-</td><td valign="top" width="180">
-<table bgcolor="#215581" border="0" cellpadding="0" cellspacing="0" width="180">
-<tbody><tr><td background="http://genamics.com/images/sidePanelBlank.gif">
-<p class="sidepanel"><br><br><br><br>
-<font style="font-size: 12px"><b>Good Morning</b></font>
-<br>
-Friday January 31, 2020<br><br>
-</p></td></tr><tr><td align="center">
-<a href="javascript:addToFavorites()" onmouseover="changeImages('addToFavorites', 'addToFavoritesOn')" onmouseout="changeImages('addToFavorites', 'addToFavoritesOff')"><img src="http://genamics.com/images/addToFavoritesOff.gif" name="addToFavorites" border="0" vspace="4"></a><br>
-<a href="javascript:emailThisPage()" onmouseover="changeImages('emailThisPage', 'emailThisPageOn')" onmouseout="changeImages('emailThisPage', 'emailThisPageOff')"><img src="http://genamics.com/images/emailThisPageOff.gif" name="emailThisPage" border="0" vspace="4"></a><br><br>
-<center><a href="http://www.genedetect.com" target="_"><img border="0" src="http://genamics.com/images/genedetect.gif"></a><br><br></center>
-<img src="http://genamics.com/images/siteawards.gif" alt="Site Awards"><br><p class="sidepanel">
-<a href="http://dmoz.org/"><img src="http://genamics.com/images/dmoz.gif" alt="DMOZ Cool Site" vspace="5" border="0"></a><br>
-<a href="http://scout.cs.wisc.edu/"><img src="http://genamics.com/images/scoutreport.gif" alt="Scout Report Selection" vspace="5" border="0"></a><br>
-<a href="http://www.hmsbeagle.com"><img src="http://genamics.com/images/hmsbeagle.gif" alt="HMS Beagle WebPick" vspace="5" border="0"></a><br>
-<a href="http://www.isinet.com"><img src="http://genamics.com/images/isicurrentcontents.gif" alt="ISI Current Web Contents Selection" vspace="0" border="0"></a>
-</p>
-
-<script type="text/javascript">sidePanelBottom('home')</script><br><img src="http://genamics.com/images/subscribe.gif">
-</td></tr>
-<tr><td background="http://genamics.com/images/sidePanelMail.gif">
-<p class="sidepanel">
-At Genamics, we are constantly enhancing and extending our resources. If you would like to be informed about the latest updates to this site, simply enter your email address in the box below. There is no risk - you can unsubscribe anytime, and we assure absolute confidentiality.
-</p>
-<form method="post" action="http://genamics.com/cgi-bin/genamics/subscribe/list.cgi" style="margin-top:3px;margin-bottom:3px;margin-left:18px">
-<input type="text" size="11" name="submit_by" value="youremail" style="font-family: verdana; font-size:11px">
-<input type="submit" value="Submit" name="subscribe" style="font-family: verdana; font-size:9px">
-<input type="hidden" name="required" value="submit_by">
-<input type="hidden" name="data_order" value="submit_by">
-<input type="hidden" name="form_id" value="Genamics Update: home">
-</form><p class="sidepanel"><a class="privacypolicy" href="http://genamics.com/privacypolicy.htm">Privacy Policy</a></p>
-</td></tr>
-<tr><td bgcolor="white"><img src="http://genamics.com/images/sidePanelBottom.gif">
-</td></tr>
-</tbody></table></td>
-</tr></tbody></table>
-
-<script type="text/javascript">bottomPanel()</script><div id="bottomButtons" style="position:relative">
-<img src="http://genamics.com/images/bottompanel.gif">
-<div style="position:absolute;left:480;top:32;">
-<a href="mailto:enquiries@genamics.com"><img src="http://genamics.com/images/bottompanel_label4.gif" border="0"></a>
-<a href="http://genamics.com/aboutus.htm"><img src="http://genamics.com/images/bottompanel_label2.gif" border="0"></a>
-</div></div>
+	<br>
+	</td></tr>
+	
+	<tr><td>
+	<br>
+	</td></tr>
+	<tr><td bgcolor="white"><img src="http://genamics.com/images/sidepanelbottom.gif" alt="Side Panel"></td></tr>
+	</tbody></table></td>
+	</tr></tbody></table>
 
 
+	<table width="764" cellpadding="0" cellspacing="0" style="background-image:url(http://genamics.com/images/bottompanel.gif)">
+	<tbody><tr><td width="709" height="56" valign="bottom" align="right">
+	
+	<a href="http://genamics.com/privacypolicy.htm" onmouseover="act(&quot;privacypolicy&quot;)" onmouseout="inact(&quot;privacypolicy&quot;)">
+	<img src="http://genamics.com/images/privacypolicy_off.png" name="privacypolicy" border="0" alt="Privacy Policy" title="Privacy Policy"></a>
+	
+	<a href="http://genamics.com/aboutus.htm" onmouseover="act(&quot;aboutus&quot;)" onmouseout="inact(&quot;aboutus&quot;)">
+	<img src="http://genamics.com/images/aboutus_off.png" name="aboutus" border="0" alt="About Us" title="About Us"></a>
+	
+	<a href="http://genamics.com/contactus.htm" onmouseover="act(&quot;contactus&quot;)" onmouseout="inact(&quot;contactus&quot;)">
+	<img src="http://genamics.com/images/contactus_off.png" name="contactus" border="0" alt="Contact Us" title="Contact Us"></a>
 
+	
+	</td><td width="55">
+	</td></tr>
+	</tbody></table>
+		
+	
+	
 
-</body></html>
+	</body></html>
