--- a/w/wo/wom/womensarticles.com.html
+++ b/w/wo/wom/womensarticles.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the womensarticles.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231220803id_/http%3A//www.womensarticles.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the womensarticles.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615064750id_/http%3A//womensarticles.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Womens Articles&nbsp;Privacy Policy</title>
@@ -37,12 +37,6 @@
 <td width="2%" class="menubarLastItem"><nobr><a href="author_login.php">Author Area</a></nobr></td>
 <td width="90%" class="menubarend"></td>
 </tr>
-
-<!--
-<tr>
-<td colspan="6" align="right"><a href="feeds.php"><img src="http://www.womensarticles.com/template/template4/image/xml.gif" border="0"></a></td>
-<tr>
--->
 </tbody></table>
 <!-- MENU_BAR END -->
 
@@ -167,6 +161,11 @@
 </tbody></table><table width="100%">
 <tbody><tr>
 <td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
+<td width="96%" class="topics"><nobr><a href="index_1_80.html">Home Business</a></nobr></td>
+</tr>
+</tbody></table><table width="100%">
+<tbody><tr>
+<td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
 <td width="96%" class="topics"><nobr><a href="index_1_46.html">Home improvement</a></nobr></td>
 </tr>
 </tbody></table><table width="100%">
@@ -177,12 +176,22 @@
 </tbody></table><table width="100%">
 <tbody><tr>
 <td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
+<td width="96%" class="topics"><nobr><a href="index_1_81.html">Internet</a></nobr></td>
+</tr>
+</tbody></table><table width="100%">
+<tbody><tr>
+<td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
 <td width="96%" class="topics"><nobr><a href="index_1_59.html">Kids &amp; Teens</a></nobr></td>
 </tr>
 </tbody></table><table width="100%">
 <tbody><tr>
 <td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
 <td width="96%" class="topics"><nobr><a href="index_1_18.html">Legal</a></nobr></td>
+</tr>
+</tbody></table><table width="100%">
+<tbody><tr>
+<td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
+<td width="96%" class="topics"><nobr><a href="index_1_63.html">Money</a></nobr></td>
 </tr>
 </tbody></table><table width="100%">
 <tbody><tr>
@@ -222,6 +231,11 @@
 </tbody></table><table width="100%">
 <tbody><tr>
 <td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
+<td width="96%" class="topics"><nobr><a href="index_1_51.html">Religion</a></nobr></td>
+</tr>
+</tbody></table><table width="100%">
+<tbody><tr>
+<td width="4%" class="topics"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
 <td width="96%" class="topics"><nobr><a href="index_1_24.html">Self-Improvement</a></nobr></td>
 </tr>
 </tbody></table><table width="100%">
@@ -257,61 +271,61 @@
 <td class="leftmenu"><table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21551_24.html">Dealing with Post-Holiday Blues</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62853_29.html">Presenting: Ottawa\'s Byward Market - Special Events, Culture &amp; Art, Boutiques and Culinary De</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21550_23.html">7 Healthy Habits</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62852_29.html">Presenting: Toronto\'s WinterCity Festival - Culinary Treats, Arts and Entertainment</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21549_27.html">The Truth About Geraniums</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62851_23.html">Quit smoking product by Nguang Nguek Fluek</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21547_34.html">Gordons Jewelry</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62850_24.html">Magick Spell For Friendship</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21545_27.html">Spring is around the corner - How is your Garden?</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62849_23.html">The Best Routine I\'ve Ever Done...</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21544_23.html">Understanding Coeliac Disease</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62847_32.html">Trampolines - Fun And Fitness Combined</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21543_15.html">Single Sheet Printing’s Hype on Holiday Season</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62846_80.html">Benefits of Being an Affiliate Marketer.</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21542_23.html">Coldsores - Little Known Facts</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62844_15.html">How to Transition Your Home Based Business from Good to Great!</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21541_23.html">Diabetes: Diabetics Should Not Have A High Carb Diet Due To Blood Pressure</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62843_24.html">Podcasts Bring People Closer to Faith</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%" valign="top"><img src="http://www.womensarticles.com/template/template4/image/purple_sq.gif"></td>
-<td width="96%" valign="top"><a class="latest" href="article_21540_15.html">Folder Printing: Neat-freak’s Remedy</a></td>
+<td width="96%" valign="top"><a class="latest" href="article_62840_17.html">An Anti-Aging Skin Cream, What To Look For?</a></td>
 </tr>
 </tbody></table>
 </td>
@@ -327,61 +341,61 @@
 <td class="leftmenu"><table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_149.html">Richard&nbsp;Chapo&nbsp;(221)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_70266.html">Avish&nbsp;Parashar&nbsp;(721)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_1293.html">Raynor&nbsp;James&nbsp;(149)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_6133.html">CD&nbsp;Mohatta&nbsp;(366)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_964.html">Jeff&nbsp;Lakie&nbsp;(145)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_149.html">Richard&nbsp;Chapo&nbsp;(248)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_4374.html">Connie&nbsp;Limon&nbsp;(144)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_3210.html">NS&nbsp;Kennedy&nbsp;(247)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_873.html">Doug&nbsp;Firebaugh&nbsp;(130)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_4605.html">Steve&nbsp;Hill&nbsp;(238)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_3131.html">Mike&nbsp;Pedersen&nbsp;(118)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_748.html">Mansi&nbsp;gupta&nbsp;(230)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_889.html">Rudy&nbsp;Silva&nbsp;(109)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_4374.html">Connie&nbsp;Limon&nbsp;(204)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_748.html">Mansi&nbsp;gupta&nbsp;(108)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_1293.html">Raynor&nbsp;James&nbsp;(182)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_1044.html">David&nbsp;Chandler&nbsp;(105)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_4696.html">Arthur&nbsp;Buchanan&nbsp;(171)</a></td>
 </tr>
 </tbody></table>
 <table width="100%">
 <tbody><tr>
 <td width="4%"><img src="http://www.womensarticles.com/template/template4/image/blue_sq.gif"></td>
-<td width="96%" class="pop_authors"><a href="author_1_3127.html">Joseph&nbsp;Mercola&nbsp;(83)</a></td>
+<td width="96%" class="pop_authors"><a href="author_1_873.html">Doug&nbsp;Firebaugh&nbsp;(166)</a></td>
 </tr>
 </tbody></table>
 </td>
@@ -559,7 +573,7 @@ different manner. We will use information in accordance with the privacy policy 
 
 <table width="100%" border="0" id="footer">
 <tbody><tr>
-<td class="copy">Copyright ©&nbsp;2005&nbsp;<a href="index.php" class="copylink">www.womensarticles.com</a>&nbsp;All rights reserved</td>
+<td class="copy">Copyright ©&nbsp;2006&nbsp;<a href="index.php" class="copylink">www.womensarticles.com</a>&nbsp;All rights reserved</td>
 </tr>
 
 <tr>
@@ -599,7 +613,7 @@ different manner. We will use information in accordance with the privacy policy 
 <tbody><tr>
 <td class="copy">
 <!-- BEGIN DYN: rescol -->
-<a class="res" href="resource_1_40.html">Baby &amp; Child&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_49.html">Beauty&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_15.html">Business&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_36.html">Career&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_37.html">Cooking &amp; Recipes&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_39.html">Dating&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_42.html">Diet&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_43.html">Family&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_34.html">Fashion&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_52.html">Fertility&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_26.html">Food-and-Drink&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_38.html">Frugal Living&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_23.html">Health-and-Fitness&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_17.html">Heath &amp; Healthcare&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_46.html">Home improvement&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_27.html">Home-and-Family&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_59.html">Kids &amp; Teens&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_18.html">Legal&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_48.html">Music&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_54.html">Pets&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_32.html">Recreation-and-Sports&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_61.html">Pregnancy &amp; Childbirth&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_33.html">Real Estate&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_22.html">Reference-and-Education&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_35.html">Relationships&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_24.html">Self-Improvement&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_29.html">Travel-and-Leisure&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_47.html">Shopping&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_41.html">Wedding &amp; Marriage&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_50.html">Writing &amp; Speaking&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;
+<a class="res" href="resource_1_40.html">Baby &amp; Child&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_49.html">Beauty&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_15.html">Business&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_36.html">Career&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_37.html">Cooking &amp; Recipes&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_39.html">Dating&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_42.html">Diet&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_43.html">Family&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_34.html">Fashion&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_52.html">Fertility&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_26.html">Food-and-Drink&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_38.html">Frugal Living&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_23.html">Health-and-Fitness&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_17.html">Heath &amp; Healthcare&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_80.html">Home Business&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_46.html">Home improvement&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_27.html">Home-and-Family&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_81.html">Internet&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_59.html">Kids &amp; Teens&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_18.html">Legal&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_63.html">Money&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_48.html">Music&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_54.html">Pets&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_32.html">Recreation-and-Sports&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_61.html">Pregnancy &amp; Childbirth&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_33.html">Real Estate&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_22.html">Reference-and-Education&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_35.html">Relationships&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_51.html">Religion&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_24.html">Self-Improvement&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_29.html">Travel-and-Leisure&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_47.html">Shopping&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_41.html">Wedding &amp; Marriage&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;<a class="res" href="resource_1_50.html">Writing &amp; Speaking&nbsp;Resources</a>&nbsp;&nbsp;&nbsp;
 <!-- END DYN: rescol -->
 </td>
 </tr>
