jobsearch.co.uk (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;jobrelated",
  "char_count": 4366,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": null,
  "flesch_kincaid": NaN,
  "homepage_snapshot_redirected_domain": "jobsearch.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060405093208id_/http://www.jobsearch.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060405093208id_/http%3A//jobsearch.co.uk",
  "interval": "2006_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "jobsearch.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615064913id_/http%3A//www.jobsearch.co.uk/static.cgi%3Fm%3Dprivacy",
  "policy_title": "Job Search - Jobs from the best UK companies",
  "policy_url": "jobsearch.co.uk/static.cgi?m=privacy",
  "sha1": "d618b00555d7c39c250f837ed4619c3792c2ab58",
  "simhash": 7161409887983527500,
  "simhash_updated": false,
  "site_hostname": "jobsearch.co.uk",
  "site_url": "http://jobsearch.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615064913",
  "word_count": 690,
  "year": 2006
}

--- a/j/jo/job/jobsearch.co.uk.html
+++ b/j/jo/job/jobsearch.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the jobsearch.co.uk privacy policy that was archived on 2005-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051221222001id_/http%3A//www.jobsearch.co.uk/static.cgi%3Fm%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jobsearch.co.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615064913id_/http%3A//www.jobsearch.co.uk/static.cgi%3Fm%3Dprivacy) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -27,7 +27,7 @@
 	<td width="273" rowspan="2" valign="bottom"><div align="left"><a href="/"><img src="/img/main-logo.gif" width="215" height="77" border="0" alt="Job Search Logo"></a><br>
         
         </div></td>
-	<td width="444" rowspan="2"><a href="/go.cgi?aid=13909"><img src="/ad/13909.gif" width="468" height="60" alt="Click here" border="0"></a>
+	<td width="444" rowspan="2"><a href="/go.cgi?aid=12839&amp;cat="><img src="/ad/12839.gif" width="468" height="60" alt="Click here" border="0"></a>
 </td>
 	<td width="16" height="60" valign="bottom">&nbsp;</td>
 </tr>
@@ -195,8 +195,7 @@
 	   <td width="12%"><div align="center"><a href="/browse_categories_roles.html" class="Foot">Jobs by category </a></div></td>
        <td width="1%"><div align="center"><font color="#FFFFFF">|</font> </div></td>
 	   <td width="12%"><div align="center"><a href="/browse_locations_all.html" class="Foot">Jobs by location</a></div></td>
-       <td width="1%"><div align="center"><font color="#FFFFFF">|</font> </div></td>
-       <td width="12%" align="center"><a href="http://www.thehotgroup.com/" class="Foot">the hotgroup plc</a></td>
+       
        <form name="menuform"></form>
          <td width="49%">
            <div align="right">
@@ -224,28 +223,6 @@
    <td width="11"><div align="right"><img name="jobsin_pr_foot_r1_c3" src="/img/foot_right.gif" width="11" height="28" border="0" alt=""></div></td>
   </tr>
 </tbody></table>
-<!-- START RedSheriff Measurement V5.01 -->
-<!-- COPYRIGHT 2002 RedSheriff Limited -->
-<script language="JavaScript" type="text/javascript"><!--
-  var _rsCI='hotonline';
-  var _rsCG='0';
-  var _rsDT=1;
-  var _rsSI=escape(window.location);
-  var _rsLP=location.protocol.indexOf('https')>-1?'https:':'http:';
-  var _rsRP=escape(document.referrer);
-  var _rsND=_rsLP+'//secure-uk.imrworldwide.com/';
-
-  if (parseInt(navigator.appVersion)>=4) {
-    var _rsRD=(new Date()).getTime();
-    var _rsSE=0;
-    var _rsSV='';
-    var _rsSM=0;
-    _rsCL='<scr'+'ipt language="JavaScript" type="text/javascript" src="'+_rsND+'v5.js"><\/scr'+'ipt>';
-  } else {
-    _rsCL='<img src="'+_rsND+'cgi-bin/m?ci='+_rsCI+'&cg='+_rsCG+'&si='+_rsSI+'&rp='+_rsRP+'">';
-  }
-  document.write(_rsCL);
-//--></script><script language="JavaScript" type="text/javascript" src="https://secure-uk.imrworldwide.com/v5.js"></script>
 <!--WEBSIDESTORY CODE HBX1.0 (Universal)-->
 <!--COPYRIGHT 1997-2004 WEBSIDESTORY,INC. ALL RIGHTS RESERVED. U.S.PATENT No.6,393,479B1 & 6,766,370. INFO:http://websidestory.com/privacy-->
 <script language="javascript">
@@ -279,10 +256,6 @@ hbx.lt="auto";
 
 
 
-<noscript>
-<img src="//secure-uk.imrworldwide.com/cgi-bin/m?ci=hotonline&amp;cg=0" alt="">
-</noscript>
-<!-- END RedSheriff Measurement V5 -->
 
 
 </div></body></html>
