--- a/a/au/aut/autoweb.co.uk.html
+++ b/a/au/aut/autoweb.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the autoweb.co.uk privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214114941id_/http%3A//www.autoweb.co.uk/legal/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the autoweb.co.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615065023id_/http%3A//www.autoweb.co.uk/legal/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -58,11 +58,10 @@
 <p align="left"><strong> Enquiries </strong></p>
 <p align="left"> If you have any enquiries about this Privacy Policy, please e-mail us at <a href="mailto:contact@autoweb.co.uk">contact@autoweb.co.uk</a>, or in writing to: </p>
 <p align="left"> Autoweb </p>
-<p align="left"> Corunna House </p>
-<p align="left"> 42-44 Ousegate </p>
+<p align="left"> New Street </p>
 <p align="left"> Selby </p>
 <p align="left"> North Yorkshire </p>
-<p align="left"> YO8 4NH </p>
+<p align="left"> YO8 4PT</p>
 <p align="left"> Customer Services at 01757 701010 (Monday to Friday between 9.00am and 5.30pm) </p>
 <p align="left">&nbsp; </p>
 Thank you for using Autoweb.co.uk
