zyrtec.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1926,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.92,
  "homepage_snapshot_redirected_domain": "zyrtec.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402233716id_/http://zyrtec.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402233716id_/http%3A//zyrtec.com",
  "interval": "2006_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "zyrtec.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615065108id_/http%3A//zyrtec.com/index.asp%3Fpid%3D0_2",
  "policy_title": "ZYRTEC\u00ae (cetirizine HCl). Privacy Policy",
  "policy_url": "zyrtec.com/index.asp?pid=0_2",
  "sha1": "bc4f767f090bb12c831deb73011c4cc678c2e7a3",
  "simhash": 13449394795470546849,
  "simhash_updated": false,
  "site_hostname": "zyrtec.com",
  "site_url": "http://zyrtec.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615065108",
  "word_count": 315,
  "year": 2006
}

--- a/z/zy/zyr/zyrtec.com.html
+++ b/z/zy/zyr/zyrtec.com.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the zyrtec.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218204849id_/http%3A//zyrtec.com/index.asp%3Fpid%3D0_2) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zyrtec.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615065108id_/http%3A//zyrtec.com/index.asp%3Fpid%3D0_2) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
-<title>ZYRTEC® (cetirizine HCl). Lots of Allergies. Just one ZYRTEC™.</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>ZYRTEC® (cetirizine HCl). Privacy Policy</title>
+<meta name="description" content="">
+<meta name="keywords" content="">
 <link rel="stylesheet" href="css/styles.asp" type="text/css">
 <script type="text/javascript" src="js/scripts.js"></script>
 <script type="text/javascript" src="js/showpollencount.js"></script>
@@ -316,7 +317,7 @@ hbx.pec="";//ERROR CODES
 //END EDITABLE SECTION
 
 //REQUIRED SECTION. CHANGE "YOURSERVER" TO VALID LOCATION ON YOUR WEB SERVER (HTTPS IF FROM SECURE SERVER)
-</script><script language="javascript1.1" defer="" src="http://www.zyrtec.com/hbx.js"></script>
+</script><script language="javascript1.1" defer="" src="http://zyrtec.com/hbx.js"></script>
 <!--END WEBSIDESTORY CODE-->
 
 </body></html>
