--- a/c/co/con/confirmit.com.html
+++ b/c/co/con/confirmit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the confirmit.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213201454id_/http%3A//www.confirmit.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the confirmit.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615065329id_/http%3A//confirmit.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Survey software, online survey software - Confirmit</title>
@@ -13,12 +13,6 @@ software">
 <meta name="robots" content="ALL INDEX">
 <meta name="author" content="Confirmit, Survey Software">
 <meta name="copyright" content="© 2005 CONFIRMIT, survey software.">
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-136347-1";
-urchinTracker();
-</script>
 <script language="JavaScript" type="text/JavaScript">
 <!--
 function MM_jumpMenu(targ,selObj,restore){ //v3.0
@@ -432,8 +426,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
               <td height="25" align="left" valign="middle" class="style5">&nbsp;</td>
               
     <td height="25" align="right" valign="middle" class="style5">| <a href="/privacy/"><font color="#FFFFFF">Privacy 
-      Statement</font></a> | © Copyright 2005 FIRM. All rights reserved.&nbsp;&nbsp;&nbsp;
-	  </td>
+      Statement</font></a> | © Copyright 2006 FIRM. All rights reserved.&nbsp;&nbsp;&nbsp; 
+    </td>
             </tr></tbody></table>
 		 </td></tr></tbody></table>
   <table width="776" border="0" cellspacing="0" cellpadding="0">
