--- a/w/wa/wal/walrusmagazine.com.html
+++ b/w/wa/wal/walrusmagazine.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the walrusmagazine.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212133246id_/http%3A//www.walrusmagazine.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the walrusmagazine.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615070027id_/http%3A//www.walrusmagazine.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Privacy Policy</title>
@@ -18,7 +18,7 @@
 
  
 <div align="center">
-<a href="https://cornerstonewebmedia.com/CPS/subscription/magazines/WalrusGiftChristm&#10;as/subform.aspx"><img src="http://images.walrusmagazine.com/ads/HolidayBanner_AD.gif" alt="Holiday Gift  Subscriptions - Get the Walrus for only 24 Dollars" width="738" height="108" vspace="4" border="0"></a>
+
 <br><img src="http://images.walrusmagazine.com/pix.gif" alt="" width="1" height="5">
 </div>
 
@@ -27,9 +27,10 @@
 		<td colspan="3" class="mt">
 		<table border="0" width="100%" cellspacing="0" cellpadding="0">
 		<tbody><tr valign="middle">
-		<td class="ml2" align="center"><a href="http://walrusmagazine.com/users.pl?op=newuserform">
-<img src="http://images.walrusmagazine.com/ads/walrus_adoctober.gif" height="136" width="126" alt="Become a new member and win great books from McLelland and Stewart" vspace="10" border="0">
-</a></td>
+		<td class="ml2" align="center"><a href="/users.pl?op=newuserform"><img src="/images/walrus_adfeb06.gif" alt="Become a new member and win great books from McLelland and Stewart" vspace="10" border="0"></a>
+<!--
+<a href="http://www.randomhouse.ca/catalog/display.pperl?isbn=9780385661027"><img src="/images/walrus_adfeb06.gif" alt="Become a new member and win great books from Random House" vspace="10" border="0"></a>
+--></td>
 		<td width="360" align="center"><a href="/index.pl"><img src="http://images.walrusmagazine.com/logos/website_logo_01.gif" alt="" width="457" height="120" vspace="10" border="0"></a></td>
 	</tr>
 	<tr valign="middle">
@@ -62,10 +63,10 @@
 		</li></ul>
 		<ul class="navlist">
 				<li><a href="/article.pl?sid=04/05/05/203242">About Us</a>
-				</li><li><a href="/article.pl?sid=04/05/05/1533254">Advertise</a>
+				</li><li><a href="/article.pl?sid=03/07/29/1629203">Advertise</a>
 		</li></ul>
 		<ul class="navlist">
-				<li><a href="/pollBooth.pl?qid=26">Poll</a>
+				<li><a href="/pollBooth.pl?qid=31">Poll</a>
 				</li><li><a href="/article.pl?sid=04/05/17/1716226">Think Tank Solutions</a>
 				</li><li><a href="/article.pl?sid=03/08/19/1411230">Walrus Bookshelf</a>
 		</li></ul>
@@ -107,7 +108,7 @@
 <input type="SUBMIT" name="userlogin" value="Log in" class="btn1">
 </form>
 <div class="iititle">Not yet a member? <a href="/users.pl?op=newuserform">Become one!</a></div>
-<p class="side"><strong>Join now</strong> and be eligible to win one of several copies of Kim Bolan's <em>Loss of Faith</em>, donated by McClelland and Stewart.
+<p class="side"><strong>Sign up now</strong> for a chance to win your very own copy of <em><a href="http://www.randomhouse.ca/catalog/display.pperl?isbn=9780385661027">The Judgement of Paris</a></em> by Ross King!
 </p>
 <p class="side">Signing up is fast, free and gives you access to online journals, newsletters, and more!
 </p><p class="sider"><a href="/users.pl?op=newuserform">Register today</a>
@@ -165,6 +166,12 @@ permission. Only that personal information which is voluntarily supplied from us
 </tr>	
 	
 </tbody></table>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-238543-5";
+urchinTracker();
+</script>
 
 
 
