whichbudget.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 4374,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.87,
  "homepage_snapshot_redirected_domain": "whichbudget.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402222659id_/http://whichbudget.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402222659id_/http%3A//whichbudget.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "whichbudget.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615072343id_/http%3A//whichbudget.com/privacy.php",
  "policy_title": "Terms and Conditions : WhichBudget Limited",
  "policy_url": "whichbudget.com/privacy.php",
  "sha1": "73be0d4d1adda9ad8556b6d6e25f4730efa40af1",
  "simhash": 17139738102765088419,
  "simhash_updated": false,
  "site_hostname": "whichbudget.com",
  "site_url": "http://whichbudget.com",
  "smog": 13.87,
  "strict_updated": false,
  "timestamp": "20060615072343",
  "word_count": 748,
  "year": 2006
}

--- a/w/wh/whi/whichbudget.com.html
+++ b/w/wh/whi/whichbudget.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the whichbudget.com privacy policy that was archived on 2005-11-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051110131051id_/http%3A//www.whichbudget.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the whichbudget.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615072343id_/http%3A//whichbudget.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html lang="en"><head>
 <title>Terms and Conditions : WhichBudget Limited</title>
@@ -81,9 +81,9 @@
 	</tr>
 </tbody></table>
 <p align="center"><a href="en/">Route Finder</a> | <a href="en/about.html">About Us</a> | <a href="en/contact.php">Contact Us</a> | <a href="en/press.html">Press Room</a></p>
-<p class="copyright" align="center">Copyright © 2002-2005 WhichBudget Limited, All Rights Reserved | <a href="/tandc.php" style="color:#000000">Terms of Use</a> | <a href="/privacy.php" style="color:#000000">Privacy Policy</a></p>
+<p class="copyright" align="center">Copyright © 2002-2006 WhichBudget Limited, All Rights Reserved | <a href="/tandc.php" style="color:#000000">Terms of Use</a> | <a href="/privacy.php" style="color:#000000">Privacy Policy</a></p>
 <p class="copyright" align="center">design by: <a href="http://www.dorifor.com" target="_blank">Dorifor Internet Consultants</a></p>
-<p class="copyright" align="center">Thu, 10 Nov 2005 15:02:44 +0200</p>
+<p class="copyright" align="center">Thu, 15 Jun 2006 03:07:39 -0400</p>
 <p>&nbsp;</p>
 
 
