zdnet.co.uk (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 10689,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.33,
  "homepage_snapshot_redirected_domain": "zdnet.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060405093216id_/http://www.zdnet.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060405093216id_/http%3A//zdnet.co.uk",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "zdnet.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615073805id_/http%3A//www.zdnet.co.uk/misc/privacy.htm",
  "policy_title": "Your Privacy at ZDNet UK",
  "policy_url": "zdnet.co.uk/misc/privacy.htm",
  "sha1": "1734bbf39d1d5114067d15f0301aae756662babe",
  "simhash": 7906368487645967382,
  "simhash_updated": false,
  "site_hostname": "zdnet.co.uk",
  "site_url": "http://zdnet.co.uk",
  "smog": 14.88,
  "strict_updated": false,
  "timestamp": "20060615073805",
  "word_count": 1719,
  "year": 2006
}

--- a/z/zd/zdn/zdnet.co.uk.html
+++ b/z/zd/zdn/zdnet.co.uk.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the zdnet.co.uk privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214090108id_/http%3A//www.zdnet.co.uk/misc/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the zdnet.co.uk privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615073805id_/http%3A//www.zdnet.co.uk/misc/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
  <title>Your Privacy at ZDNet UK</title>
+ <link rel="SHORTCUT ICON" href="http://www.zdnet.co.uk/favicon.ico">
  <link rel="stylesheet" type="text/css" href="/css/zdnetuk.css">
  <link rel="stylesheet" type="text/css" href="/css/zd-stemail.css">
  <link rel="stylesheet" type="text/css" href="/css/reviews.css">
   
     
- 
  
  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
  
@@ -30,13 +30,13 @@ s.prop2="privacy"
 s.prop3=""
 s.prop4=""
 s.prop5=""
+s.prop6=""
+s.prop7=""
 /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
 var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <script language="JavaScript"><!--
 if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+'-')
-//--></script><noscript><img
-src="http://zdnetcouk.122.2O7.net/b/ss/zdnetcouk/1/H.1--NS/0"
-height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
+//--></script><!--/DO NOT REMOVE/-->
 <!-- End SiteCatalyst code version: H.1. -->
 
  </head>
@@ -44,27 +44,28 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 
  
 <!-- DAS Reporting -->
-	<div style="position: absolute; top: 0; left: 0;"><script language="JavaScript" src="http://ad.uk.doubleclick.net/adj/reporting.zdnet.co.uk/misc;sz=1x1;ptile=1;dcopt=ist;ord=4285?"></script></div>
+	<div style="position: absolute; top: 0; left: 0;"><script language="JavaScript" src="http://ad.uk.doubleclick.net/adj/reporting.zdnet.co.uk/misc;sz=1x1;ptile=1;dcopt=ist;ord=4021?"></script></div>
 <!-- /DAS Reporting -->
 
 <!-- ZD Header BEGIN -->
 <div align="center">
 
 <!-- ELU Ad Call -->
-<script language="JavaScript" src="http://ad.uk.doubleclick.net/adj/elu.cms.zdnet.co.uk/misc;dcopt=ist;sz=1x1;ord=4285?" type="text/javascript"></script>
+<script language="JavaScript" src="http://ad.uk.doubleclick.net/adj/elu.cms.zdnet.co.uk/misc;dcopt=ist;sz=1x1;ord=4021?" type="text/javascript"></script>
 <!-- /ELU Ad Call -->
 
 <table background="/i/z/h/plt-zdnetuk-top.jpg" width="750" height="55" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
   <td width="750" align="RIGHT">
     <table width="750" border="0" cellspacing="0" cellpadding="0">
-      <tbody><tr><td valign="TOP" align="right"><marquee width="37%" behavior="scroll" scrollamount="4">
-<a href="http://www.zdnet.co.uk" class="yrhmLink" target="_blank"><strong>Don't Miss:</strong></a>
-<img src="/i/z/gl/blt-white.gif" alt="" height="5" width="4" hspace="3" vspace="2"><a href="http://comment.zdnet.co.uk/other/0,39020682,39241046,00.htm" class="yrhmLink" target="_blank">Your own, personal IT manager</a>
-<img src="/i/z/gl/blt-white.gif" alt="" height="5" width="4" hspace="3" vspace="2"><a href="http://reviews.zdnet.co.uk/0,39023100,39240600,00.htm" class="yrhmLink" target="_blank>OpenOffice.org 2.0 Overview</A> 
-<img src=" i="" z="" gl="" blt-white.gif"="" alt="" height="5" width="4" hspace="3" vspace="2"></a><a href="http://insight.zdnet.co.uk/0,39020415,39240344,00.htm" class="yrhmLink" target="_blank">Europe plays innovation catch-up</a> 
-<img src="/i/z/gl/blt-white.gif" alt="" height="5" width="4" hspace="3" vspace="2"><a href="http://news.zdnet.co.uk/hardware/servers/0,39020363,39241045,00.htm" class="yrhmLink" target="_blank">Google warns of spiralling energy costs</a>
-</marquee></td></tr>
+      <tbody><tr><td valign="TOP" align="right"><marquee width="37%" behavior="scroll" scrollamount="4" scrolldelay="200">
+<strong><a href="http://www.zdnet.co.uk" class="yrhmLink">Don't Miss:</a>
+<img src="/i/z/gl/blt-white.gif" alt="" height="5" width="4" hspace="3" vspace="2"><a href="http://insight.zdnet.co.uk/software/0,39020463,39274587,00.htm" class="yrhmLink">Talking PCs? Talk to the hand</a> 
+<img src="/i/z/gl/blt-white.gif" alt="" height="5" width="4" hspace="3" vspace="2"><a href="http://news.zdnet.co.uk/internet/security/0,39020375,39274632,00.htm" class="yrhmLink">Worm targets Yahoo Mail</a>
+<img src="/i/z/gl/blt-white.gif" alt="" height="5" width="4" hspace="3" vspace="2"><a href="http://news.zdnet.co.uk/software/applications/0,39020384,39274633,00.htm" class="yrhmLink">Google Earth zooms in</a>
+<img src="/i/z/gl/blt-white.gif" alt="" height="5" width="4" hspace="3" vspace="2"><a href="http://news.zdnet.co.uk/internet/0,39020369,39274599,00.htm" class="yrhmLink">Yahoo launches customised IE7 beta</a>
+</strong></marquee> 
+</td></tr>
     </tbody></table>
   </td>
 </tr>
@@ -72,7 +73,7 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 
 <!-- Top tabs BEGIN -->
 <table background="/i/z/h/plt-zdnetuk-base.jpg" width="750" height="38" cellspacing="0" cellpadding="0" border="0">
-<tbody><tr height="10"><td colspan="13"><img src="http://gserv.cneteu.net/i/z/misc/b.gif?x=ae53e4984b430a8efee853bc287f774c&amp;r=" width="1" height="1" border="0"></td></tr>
+<tbody><tr height="10"><td colspan="13"><img src="http://gserv.cneteu.net/i/z/misc/b.gif?x=c12e0a238c99a23eb7f53102095e1e93&amp;r=" width="1" height="1" border="0"></td></tr>
 <tr height="28">
 <td width="1" background="/i/z/h/tab_edge4.gif" valign="bottom"><img src="/i/b.gif" width="1" height="1" border="0"></td>
 <td width="113" background="/i/z/h/tab_bg1.gif"><img src="/i/b.gif" width="100" height="1" border="0"></td>
@@ -132,12 +133,12 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 
 <script type="text/javascript" src="http://www.zdnet.co.uk/js/ilu-hardcoded.js"></script>
 
-<script language="JavaScript" src="http://ad.uk.doubleclick.net/adj/leaderboard.cms.zdnet.co.uk/misc-hp;sz=728x90;csize=;channel=misc;var1=homepage;var2=;pagetype=index;ptile=1;search=;dcopt=ist;ord=4285?">
+<script language="JavaScript" src="http://ad.uk.doubleclick.net/adj/leaderboard.cms.zdnet.co.uk/misc-hp;sz=728x90;csize=;channel=misc;var1=homepage;var2=;pagetype=index;ptile=1;search=;dcopt=ist;ord=4021?">
 </script>
 
 <noscript>
-        <A HREF="http://ad.uk.doubleclick.net/jump/leaderboard.cms.zdnet.co.uk/misc-hp;sz=728x90;csize=;channel=misc;var1=homepage;var2=;pagetype=index;ptile=1;search=;dcopt=ist;ord=4285?">
-                <IMG SRC="http://ad.uk.doubleclick.net/ad/leaderboard.cms.zdnet.co.uk/misc-hp;sz=728x90;csize=;channel=misc;var1=homepage;var2=;pagetype=index;ptile=1;search=;dcopt=ist;ord=4285?" BORDER="0" WIDTH="728" height="90"></A>
+        <A HREF="http://ad.uk.doubleclick.net/jump/leaderboard.cms.zdnet.co.uk/misc-hp;sz=728x90;csize=;channel=misc;var1=homepage;var2=;pagetype=index;ptile=1;search=;dcopt=ist;ord=4021?">
+                <IMG SRC="http://ad.uk.doubleclick.net/ad/leaderboard.cms.zdnet.co.uk/misc-hp;sz=728x90;csize=;channel=misc;var1=homepage;var2=;pagetype=index;ptile=1;search=;dcopt=ist;ord=4021?" BORDER="0" WIDTH="728" height="90"></A>
 </noscript> 
 
 </td></tr>
@@ -169,7 +170,8 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
      <td width="1" bgcolor="#000033"><img src="/i/b.gif" width="1" height="1" hspace="0" vspace="0" alt=""><br></td>
      <!-- ZD Left-hand border END -->
      <td width="728" bgcolor="#FFFFFF">
- <!-- Search box E -->
+ 
+<!-- Search box E -->
 
 <div align="CENTER">
 
@@ -187,7 +189,7 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 				<td colspan="2">
 					<table height="40" width="530" border="0" cellpadding="0" cellspacing="0">
 						<tbody><tr>
-						<form action="http://www.zdnet.co.uk/search/" style="padding:0px;margin:0px;"></form>
+						<form action="http://www.zdnet.co.uk/search/index.htm" style="padding:0px;margin:0px;"></form>
 						<td bgcolor="#CCCCCC" width="1"><img src="/i/b.gif" width="1" height="1" hspace="0" vspace="0" alt=""></td>
 						<td><img src="/i/b.gif" width="5" height="1" hspace="0" vspace="0" alt=""><img src="/i/z/gl/search/search.gif" width="52" height="22" border="0" alt="Search:" hspace="0" vspace="0"></td>
 						<!--<TD><IMG SRC="/i/b.gif" WIDTH=5 HEIGHT=1 HSPACE=0 VSPACE=0 ALT=""></TD>-->
@@ -197,27 +199,15 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 								<tbody><tr>
 									<td>
 									<div class="searchText">
-									<input type="text" name="query" value="" size="15">
+									<input type="text" name="q" value="" size="15">
 									</div>
-									</td>
-
-									<td><img src="/i/b.gif" width="5" height="1" hspace="0" vspace="0" alt=""></td>
-
-									<td>
-									<input type="radio" name="words" value="allwords" class="searchBarWordsOption">
-                                    <div class="searchBarWordsOption">&nbsp;exact match</div>
-
-									<br>
-
-									<input type="radio" name="words" value="anywords" class="searchBarWordsOption">
-                                    <div class="searchBarWordsOption">&nbsp;any words</div>
 									</td>
 
 									<td><img src="/i/b.gif" width="15" height="1" hspace="0" vspace="0" alt=""></td>
 
 									<td>
 									<div class="searchText">
-<select name="collection"><option selected="" value="all">All of ZDNet</option><option value="news">News</option><option value="insight">Insight</option><option value="comment">Comment</option><option value="whitepapers">White Papers</option><option value="reviews">Reviews</option><option value="netbuyer">Prices</option><option value="downloads">Downloads</option><option value="web">All the Web</option></select>
+<select name="c"><option selected="" value="All">All of ZDNet</option><option value="News">News</option><option value="Insight">Insight</option><option value="Comment">Comment</option><option value="Whitepapers">White Papers</option><option value="Reviews">Reviews</option><option value="Shopping">Prices</option><option value="Downloads">Downloads</option><option value="Web">All the Web</option></select>
 <img src="/i/b.gif" width="5" height="1" hspace="0" vspace="0" alt="">
 									</div>
 									</td>
@@ -286,7 +276,7 @@ height="1" width="1" border="0" alt="" /></noscript><!--/DO NOT REMOVE/-->
 <table cellpadding="0" cellspacing="0" border="0" width="100%">
   <tbody><tr>
     <td align="LEFT"><a href="/zdnetuk/" class="brcLinkb">ZDNet UK</a><span class="brcArrow"> &gt; </span><span class="brcTextr">Your Privacy</span></td>
-    <td align="RIGHT"><p class="hpDate">Wednesday 14th December 2005</p></td>
+    <td align="RIGHT"><p class="hpDate">Thursday 15th June 2006</p></td>
   </tr>
   <tr>
     <td bgcolor="#cccccc" colspan="2"><img src="/i/b.gif" width="1" height="1" hspace="0" vspace="0" alt=""><br></td>
@@ -467,16 +457,16 @@ UPDATED DECEMBER 2003
 <table width="100%" border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
 <tbody><tr>
 <td width="5" valign="bottom"><img alt="" src="/i/z/ads/ha/2003/07/blue.gif" height="7" width="5"></td> <td width="175">
-<a href="http://adfarm.mediaplex.com/ad/ck/3990-28486-4716-19?mpt=%n"><img src="/i/z/ads/ha/2005/11/anchor-mobiledata.gif" width="175" height="96" border="0" alt=""></a></td>
+<a href="http://insight.zdnet.co.uk/itp/priorities.htm"><img src="/i/z/ads/ha/2006/01/anchor-itpriorities.gif" width="175" height="96" border="0" alt="Download your IT Priorities"></a></td>
 
 <td width="6" valign="bottom"><img alt="" src="/i/z/ads/ha/2003/07/blue.gif" height="7" width="6"></td>
-<td width="175"><a href="http://insight.zdnet.co.uk/itp/remoteworking/"><img src="/i/z/ads/ha/2005/10/business-mobility-v2.gif" width="175" height="96" border="0" alt=""></a></td>
+<td width="175"><a href="http://www.zdnet.co.uk/members/login/register.htm"><img src="/i/z/ads/ha/2003/08/it_white_papers.gif" alt="Get your IT White papers" width="175" height="96" border="0"></a></td>
 
 <td width="6" valign="bottom"><img alt="" src="/i/z/ads/ha/2003/07/blue.gif" height="7" width="6"></td>
-<td width="175"><a href="http://reviews.zdnet.co.uk/buyersguides/infrastructure/"><img src="/i/z/ads/ha/2005/07/anchor-infrastucture.gif" width="175" height="96" border="0" alt=""></a></td>
+<td width="175"><a href="http://reviews.zdnet.co.uk/buyersguides/infrastructure/"><img src="/i/z/ads/ha/2005/07/anchor-infrastucture.gif" width="175" height="96" border="0" alt="Infrastructure Simplification"></a></td>
 
 <td width="6" valign="bottom"><img alt="" src="/i/z/ads/ha/2003/07/blue.gif" height="7" width="6"></td>
-<td width="175"><a href="http://comment.zdnet.co.uk/rupertgoodwins/"><img src="/i/z/ads/ha/2004/04/rupert_goodwins_diary2.gif" width="175" height="96" border="0" alt="" align="absbottom"></a></td>
+<td width="175"><a href="http://comment.zdnet.co.uk/rupertgoodwins/"><img src="/i/z/ads/ha/2004/04/rupert_goodwins_diary2.gif" width="175" height="96" border="0" alt="Rupert Goodwins' Diary - the real life of an IT Journalist" align="absbottom"></a></td>
 <td width="5" valign="bottom"><img alt="" src="/i/z/ads/ha/2003/07/blue.gif" height="7" width="5"></td>
 
 </tr>
@@ -509,7 +499,7 @@ UPDATED DECEMBER 2003
   <td colspan="5" bgcolor="#83A3CB">
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
   <tbody><tr>
-    <td align="LEFT"><img src="/i/b.gif" width="2" height="15" border="0" hspace="0" vspace="0" alt=""><a href="http://www.zdnet.co.uk/misc/contact.htm" class="footerCU">Contact Us</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/privacy.htm" class="footerCU">Privacy</a><span class="blackSeperator">| </span><a href="http://www.zdnet.com/filters/terms/" class="footerCU">Terms</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/copyright/policy.htm" class="footerCU">Permissions</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/feeds/"><img src="/i/z/f/rss-rss.gif" alt="ZDNet UK RSS Feeds" width="36" height="14" border="0" align="absbottom"></a><span class="blackSeperator">| </span><a href="http://www.cnet.com/aboutcnet/company/international.html" class="footerCU">International</a><span class="blackSeperator">| </span><a href="http://adinfo.zdnet.co.uk/" class="footerCU">Advertise</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/corrections.htm" class="footerCU">Corrections</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/sitemap.htm" class="footerCU">Site Map</a><span class="blackSeperator">| </span><a href="http://uk.builder.com/" class="footerCU">Builder</a><span class="blackSeperator">| </span><a href="http://www.silicon.com/" class="footerCU">silicon.com</a><span class="blackSeperator">| </span><a href="http://www.cnet.co.uk/misc/sitemap.htm" class="footerCU">CNET.co.uk</a></td>
+    <td align="LEFT"><img src="/i/b.gif" width="2" height="15" border="0" hspace="0" vspace="0" alt=""><a href="http://www.zdnet.co.uk/misc/contact.htm" class="footerCU">Contact Us</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/privacy.htm" class="footerCU">Privacy</a><span class="blackSeperator">| </span><a href="http://www.zdnet.com/filters/terms/" class="footerCU">Terms</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/copyright/policy.htm" class="footerCU">Permissions</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/feeds/"><img src="/i/z/f/rss-rss.gif" alt="ZDNet UK RSS Feeds" width="36" height="14" border="0" align="absbottom"></a><span class="blackSeperator">| </span><a href="http://www.cnet.com/aboutcnet/company/international.html" class="footerCU">International</a><span class="blackSeperator">| </span><a href="http://adinfo.zdnet.co.uk/" class="footerCU">Advertise</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/corrections.htm" class="footerCU">Corrections</a><span class="blackSeperator">| </span><a href="http://www.zdnet.co.uk/misc/sitemap.htm" class="footerCU">Site Map</a><span class="blackSeperator">| </span><a href="http://uk.builder.com/" class="footerCU">Builder</a><span class="blackSeperator">| </span><a href="http://www.silicon.com/" class="footerCU">silicon.com</a><span class="blackSeperator">| </span><a href="http://www.cnet.co.uk/misc/sitemap.htm" class="footerCU">CNET.co.uk</a><span class="blackSeperator">| </span><br><a href="http://www.cnetchannel.com/" class="footerCU">&nbsp;CNET Channel</a></td>
     <!--<TD ALIGN=RIGHT><A HREF="http://www.cnet.com/aboutcnet/0-13611.html?tag=ft" CLASS="footerCU">About CNET Networks</A></TD>-->
     <td width="1"><img src="/i/b.gif" width="1" height="1" hspace="0" vspace="0" alt=""><br></td>
   </tr>
@@ -527,7 +517,7 @@ UPDATED DECEMBER 2003
 <div align="CENTER">
 <table width="750" cellpadding="3" cellspacing="0" border="0">
   <tbody><tr valign="top">
-    <td><div class="footerCRText"><a href="http://www.cnet.com/aboutcnet/0-13611.html?tag=ft" class="footerCRLink2">About CNET Networks</a><br>Copyright © 2005 CNET Networks, Inc.  All Rights Reserved.<br>ZDNet is a registered service mark of CNET Networks, Inc. ZDNet Logo is a service mark of CNET NETWORKS, Inc.</div></td>
+    <td><div class="footerCRText"><a href="http://www.cnet.com/aboutcnet/0-13611.html?tag=ft" class="footerCRLink2">About CNET Networks</a><br>Copyright © 2006 CNET Networks, Inc.  All Rights Reserved.<br>ZDNet is a registered service mark of CNET Networks, Inc. ZDNet Logo is a service mark of CNET NETWORKS, Inc.</div></td>
     <td align="right"><a href="http://www.bridgethedigitaldivide.com/"><img src="http://www.zdnet.co.uk/i/z/ads/ba/btdd.gif" border="0"></a></td>
   </tr>
 </tbody></table>
@@ -535,7 +525,7 @@ UPDATED DECEMBER 2003
 <!-- Copyright END --> 
  
 <!-- DW-EU BEGIN -->
-<img src="http://dw-eu.com.com/clear/c.gif?ts=1134550943&amp;sId=55" height="1" width="1" border="0" alt="">
+<img src="http://dw-eu.com.com/clear/c.gif?ts=1150357085&amp;sId=55" height="1" width="1" border="0" alt="">
 <!-- DW-EU END -->
 
  <!-- www01.zdnet.co.uk -->
